# global-lake-monitoring

./: .gitignore  README.md  pyproject.toml
configs/: transformer.yaml
notebooks/: demo.ipynb
src/lake/: __init__.py  cli.py  config.py
src/lake/explain/: __init__.py  climatewise.py  lakewise.py  shap_utils.py
src/lake/models/: __init__.py  transformer.py  tree.py
src/lake/training/: __init__.py  evaluate.py  train.py
src/lake/viz/: __init__.py  loss_curves.py  scatter.py  shap_plots.py
tests/: test_smoke.py
